RESOLVED FIXED137101
[iOS] Fix the iOS build; add case statements for kCLAuthorizationStatusAuthorized
https://bugs.webkit.org/show_bug.cgi?id=137101
Summary [iOS] Fix the iOS build; add case statements for kCLAuthorizationStatusAuthor...
Daniel Bates
Reported 2014-09-24 18:45:11 PDT
To satisfy clang, add case statement for kCLAuthorizationStatusAuthorized in -[WebGeolocationCoreLocationProvider requestGeolocationAuthorization], <http://trac.webkit.org/browser/trunk/Source/WebKit/ios/Misc/WebGeolocationCoreLocationProvider.mm?rev=168555#L95> and -[WebGeolocationCoreLocationProvider locationManager:didChangeAuthorizationStatus:, <http://trac.webkit.org/browser/trunk/Source/WebKit/ios/Misc/WebGeolocationCoreLocationProvider.mm?rev=168555#L149>.
Attachments
Patch (2.16 KB, patch)
2014-09-24 18:46 PDT, Daniel Bates
mark.lam: review+
Daniel Bates
Comment 1 2014-09-24 18:46:28 PDT
Mark Lam
Comment 2 2014-09-24 18:56:21 PDT
Comment on attachment 238635 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=238635&action=review r=me with indentation fix. > Source/WebKit/ios/Misc/WebGeolocationCoreLocationProvider.mm:114 > + case kCLAuthorizationStatusAuthorized: Please fix this indentation.
Daniel Bates
Comment 3 2014-09-24 19:15:18 PDT
Daniel Bates
Comment 4 2014-09-24 19:17:42 PDT
Note You need to log in before you can comment on or make changes to this bug.