[iOS] Fix the iOS build; add case statements for kCLAuthorizationStatusAuthorized https://bugs.webkit.org/show_bug.cgi?id=137101 <rdar://problem/18449815>

Reviewed by Mark Lam.

* Misc/WebGeolocationCoreLocationProvider.mm:
(-[WebGeolocationCoreLocationProvider requestGeolocationAuthorization]):
(-[WebGeolocationCoreLocationProvider locationManager:didChangeAuthorizationStatus:]):

Canonical link: https://commits.webkit.org/154905@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@173940 268f45cc-cd09-0410-ab3c-d52691b4dbfc